2006-09-25  Jim Hayward <jim@bluefish.openoffice.nl>

	* 1.0.6 release

2006-09-19  Jim Hayward <jim@bluefish.openoffice.nl>

	* src/filebrowser.c: Minor code cleanups.  Remove some no longer
	  needed comments.

2006-09-12  Jim Hayward <jim@bluefish.openoffice.nl>

	* po/ja.po: Japanese translation update

2006-09-06  Michèle Garoche <michele.garoche@easyconnect.fr>

	* ChangeLog, NEWS: Updated NEWS and ChangeLog (last bug fixed)

2006-08-31  Jim Hayward <jim@bluefish.openoffice.nl>

	* data/highlighting.in: Fix Bluefish Bug #352701

2006-08-27  Jim Hayward <jim@bluefish.openoffice.nl>

	* src/snr2.c: Fix Bluefish Bug #352762

2006-08-25  Michèle Garoche <michele.garoche@easyconnect.fr>

	* AUTHORS, ChangeLog, NEWS: Updated AUTHORS and ChangeLog, reworked
	  NEWS

2006-08-25  Daniel Leidert <daniel.leidert.spam@gmx.net>

	* po/de.po: Updated German translation.

2006-08-25  Michèle Garoche <michele.garoche@easyconnect.fr>
 
    * NEWS: Updated NEWS (adjust date when releasing).
    
    * AUTHORS: Updated authors for this release
 
    * src/author.c: Updated authors for this release
 
    * po/: bg.po, cs.po, da.po, de.po, el.po, es.po, eu.po, fi.po,
      fr.po, hu.po, it.po, ja.po, nl.po, no.po, pl.po, pt.po, pt_BR.po,
      ro.po, ru.po, sr.po, sv.po, ta.po, tr.po, zh_CN.po, zh_TW.po: PO
      file update

2006-08-25  Jim Hayward <jim@bluefish.openoffice.nl>

	* src/menu.c: Fix Bluefish Bug #337564

2006-08-22  Jim Hayward <jim@bluefish.openoffice.nl>

	* src/: fref.c, gtk_easy.c: Disable debugging.	Don't double free a
	  pointer.

2006-08-21  Jim Hayward <jim@bluefish.openoffice.nl>

	* po/: bg.po, cs.po, da.po, de.po, el.po, es.po, eu.po, fi.po,
	  fr.po, hu.po, it.po, ja.po, nl.po, no.po, pl.po, pt_BR.po, pt.po,
	  ro.po, ru.po, sk.po, sr.po, sv.po, ta.po, tr.po, zh_CN.po,
	  zh_TW.po: po file update

2006-08-21  Jim Hayward <jim@bluefish.openoffice.nl>

	* src/gtk_easy.c: OK this is the REAL fix for Bluefish Bug #337739
